apps/base/logging-elasticsearch/deploy/exporter/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-exporter
  labels:
    prometheus-target: elastic-exporter
spec:
  ports:
  - port: 9114
    name: metrics
    targetPort: metrics
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/component: exporter
